Make Java SerialService connect

--- a/RNG Shrine App/Assets/Plugins/Android/AndroidManifest.xml
+++ b/RNG Shrine App/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,6 +12,7 @@
             </intent-filter>
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
         </activity>
+        <service android:name="com.android_serial_port.SerialService"/>
     </application>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
